--- a/src/app/main/compose-box/compose-box.component.css
+++ b/src/app/main/compose-box/compose-box.component.css
@@ -1,5 +1,4 @@
 .compose-card {
-    height: 62vh;
     width: 62vh;
     -webkit-box-shadow: -14px 7px 15px -2px rgba(0,0,0,0.03);
     -moz-box-shadow: -14px 7px 15px -2px rgba(0,0,0,0.03);
@@ -12,6 +11,7 @@
 .title {
     width: 100%;
     height: 40px;
+    cursor: pointer;
     background-color: #404040;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
@@ -20,6 +20,12 @@
     align-items: center;
     padding-left: 15px;
     padding-right: 12px;
+    color: gray;
+}
+
+.t-icons {
+    display: flex;
+    align-items: center;
 }
 
 .title-icon {
@@ -31,7 +37,7 @@
 }
 
 .title-icon:hover {
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.26);
 }
 
 .compose-body {
@@ -55,11 +61,13 @@
     border-bottom: 1px solid rgba(204, 202, 202, 0.555);
     padding: 5px;
     margin-top: 5px;
+    color: gray;
 }
 
 .ccbcc {
     padding-right: 4px;
     cursor: pointer;
+    color: gray;
 }
 
 .ccbcc:hover {
@@ -68,23 +76,37 @@
 
 .message-body {
     width: 100%; 
-    height: 42.5vh; 
+    height: 32vh; 
     outline: none; 
     background: white; 
     border: none; 
     resize: none;
+    display: flex;
+    flex-direction: column;
+    margin-top: 7px;
+    margin-bottom: 3px;
 }
+
 
 .compose-footer {
     display: flex;
-    height: 6vh;
+    height: 5.5vh;
     flex-direction: column;
+    background: #fff;
+    z-index: 200;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    justify-content: flex-end;
 }
 
+
 .file-uploader {
-    height: 40px;
+    height: 30px;
     display: flex;
-    margin-bottom: 5px;
+    line-height: 30px;
+    font-size: 14px;
+    align-items: center;
+    margin-top: 5px;
     /* background: violet; */
 }
 
@@ -111,10 +133,21 @@
     justify-content: center;
     align-items: center;
     margin-left: 8px;
-
 }
 
 .f-btn:hover {
+    background-color: rgba(128, 128, 128, 0.158);
+}
+.fr-btn {
+    height: 30px;
+    width: 30px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fr-btn:hover {
     background-color: rgba(128, 128, 128, 0.158);
 }
 
@@ -129,8 +162,6 @@
     overflow-x: hidden;
 }
 
-
-
 .image-list {
     width: 100%;
     border: solid 1px #ccc;
@@ -139,36 +170,117 @@
     background: white;
     border-radius: 4px;
     overflow: hidden;
-  }
-  
-  .image-box {
+}
+
+.image-box {
     border: solid 1px rgba(204, 204, 204, 0.801);
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
     cursor: move;
-  }
-  
-  .cdk-drag-preview {
+}
+
+.cdk-drag-preview {
     box-sizing: border-box;
     border-radius: 4px;
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
                 0 8px 10px 1px rgba(0, 0, 0, 0.14),
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  
-  .cdk-drag-placeholder {
+}
+
+.cdk-drag-placeholder {
     opacity: 0;
-  }
-  
-  .cdk-drag-animating {
+}
+
+.cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .image-box:last-child {
+}
+
+.image-box:last-child {
     border: none;
-  }
-  
-  .image-list.cdk-drop-list-dragging .image-box:not(.cdk-drag-placeholder) {
+}
+
+.image-list.cdk-drop-list-dragging .image-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
+}
+
+
+
+.mat-menu-item {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    outline: 0;
+    border: none;
+    -webkit-tap-highlight-color: transparent;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    line-height: 38px;
+    height: 38px;
+    padding: 0 16px;
+    text-align: left;
+    text-decoration: none;
+    max-width: 100%;
+    position: relative;
+}
+
+.mat-menu-panel {
+    min-width: 250px !important;
+}
+
+ /* .cdk-overlay-pane {
+    position: absolute;
+    pointer-events: auto;
+    box-sizing: border-box;
+    z-index: 1000;
+    display: flex;
+    max-width: 100%;
+    max-height: 100%;
+    width: 250px !important;
+} */
+
+#search {
+    width: 100%; 
+    border-bottom: 1px solid gray; 
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+
+}
+
+.search-form {
+    width: 100%; 
+    display: flex; 
+    align-items: center;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+
+.mat-list-base {
+    height: 280px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+    height: 34px;
+}
+
+::ng-deep .mat-list-text {
+    font-size: .875rem;
+}
+
+.file-name {
+    overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: dodgerblue; 
+    padding-left: 8px;
+    max-width: 230px;
+}
