--- a/src/app/main/details/details.component.css
+++ b/src/app/main/details/details.component.css
@@ -62,6 +62,286 @@
     padding-left: 2px;
 }
 
+
+.file-viewer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: flex-start;
+}
+
+
+
+.file-item {
+    height: 120px;
+    width: 180px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+    text-decoration: none;
+    margin: 0 0 16px 16px;
+    cursor: pointer;
+}
+
+.m-view {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+
+.h-view {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    opacity: 0;
+    background-color: #f5f5f5;
+    transition: opacity 0.3s;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.file-item:hover .h-view {
+    opacity: 1;
+}
+
+.main-view {
+    height: 90px;
+    width: 100%;
+    border: .5px solid rgba(220, 220, 220, 0.5);
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.bottom-view {
+    height: 30px;
+    width: 100%;
+    border: .5px solid rgba(220, 220, 220, 0.5);
+    border-top: none;
+    display: flex;
+    align-items: center;
+    background-color: #f5f5f5;
+}
+
+.h-top {
+    height: 30px;
+    width: 100%;
+    border-top: none;
+    display: flex;
+    margin-top: 5px;
+    margin-left: 5px;
+    align-items: center;
+    background-color: #f5f5f5;
+}
+
+.h-bottom {
+    width: 100%;
+    height: auto;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+}
+
+.hb-icon {
+    padding-left: 3px;
+    padding-right: 3px;
+    border-radius: 4px;
+    height: 26px;
+    width: 32px;
+    font-size: 20px;
+    line-height: 26px;
+    text-align: center;
+    background-color: gray;
+    color: #fff;
+    margin-left: 5px;
+    cursor: pointer;
+    transition: background-color 0.1s;
+}
+
+.hb-icon:hover {
+    background-color: rgba(2, 2, 2, 0.637);
+}
+
+.pdf-viewer {
+    height: 90px;
+    width: 100%;
+    overflow: hidden;
+}
+
+::ng-deep .ng2-pdf-viewer-container {
+    overflow: hidden;
+}
+
+.pdf:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-width: 20px 20px 0 0;
+    border-style: solid;
+    border-color: rgba(254,82,76, 1) #fff #fff ; 
+    
+    display: block;
+    width: 0;
+}
+
+.pdf:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    border-width: 20px 20px 0  0;
+    border-style: solid;
+    border-color: transparent rgba(83, 79, 79, 0.281) transparent  transparent; 
+
+    /* Firefox 3.0 damage limitation */
+    display: block;
+    width: 0;
+}
+
+.doc:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-width: 20px 20px 0 0;
+    border-style: solid;
+    border-color: #3182ef #fff #fff ; 
+    
+    display: block;
+    width: 0;
+}
+
+.doc:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    border-width: 20px 20px 0  0;
+    border-style: solid;
+    border-color: transparent rgba(83, 79, 79, 0.281) transparent  transparent; 
+
+    /* Firefox 3.0 damage limitation */
+    display: block;
+    width: 0;
+}
+
+.xl:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-width: 20px 20px 0 0;
+    border-style: solid;
+    border-color: #2e9342 #fff #fff ; 
+    
+    display: block;
+    width: 0;
+}
+
+.xl:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    border-width: 20px 20px 0  0;
+    border-style: solid;
+    border-color: transparent rgba(83, 79, 79, 0.281) transparent  transparent; 
+
+    /* Firefox 3.0 damage limitation */
+    display: block;
+    width: 0;
+}
+
+.zip:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-width: 20px 20px 0 0;
+    border-style: solid;
+    border-color: #5f6368 #fff #fff ; 
+    
+    display: block;
+    width: 0;
+}
+
+.zip:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    border-width: 20px 20px 0  0;
+    border-style: solid;
+    border-color: transparent rgba(83, 79, 79, 0.281) transparent  transparent; 
+
+    /* Firefox 3.0 damage limitation */
+    display: block;
+    width: 0;
+}
+
+.doc-icon {
+    height: 20px; 
+    width: 20px; 
+    line-height: 20px; 
+    background-color: #3182ef; 
+    color: #fff; 
+    font-size: 12px; 
+    text-align: center;
+    border-radius: 3px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.xl-icon {
+    height: 20px; 
+    width: 20px; 
+    line-height: 20px; 
+    background-color: #2e9342; 
+    color: #fff; 
+    font-size: 12px; 
+    text-align: center;
+    border-radius: 3px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+.zip-icon {
+    height: 20px; 
+    width: 20px; 
+    line-height: 20px; 
+    background-color: #5f6368; 
+    color: #fff; 
+    font-size: 12px; 
+    text-align: center;
+    border-radius: 3px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.pdf-icon {
+    color: rgba(254,82,76, 1);
+    font-size: 20px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+
+.file-name {
+    font-size: 12px;
+    line-height: 16px;
+    height: 16px;
+    width: 120px;
+    -webkit-tap-highlight-color: transparent;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
 .mail-profile {
     background-color: #cccccc31;
     width: 40px;
@@ -138,4 +418,271 @@
     max-width: 100%;
     max-height: 100%;
     width: 250px !important;
+}
+
+.reply-box {
+    width: 100%;
+    display: flex;
+    padding: 10px 20px;
+    overflow: hidden;
+}
+
+.reply-body {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 6px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    -webkit-box-shadow: .5px 1px 3px 1px rgba(0, 0, 0, 0.301);
+    -moz-box-shadow: .5px 1px 3px 1px rgba(0, 0, 0, 0.315);
+    box-shadow: .5px 1px 3px 1px rgba(0, 0, 0, 0.322);
+}
+
+.reply-header {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: space-between;
+}
+
+.reply-btns {
+    padding: 5px;
+    height: 30px;
+    display: flex;
+    flex-wrap: nowrap;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.reply-btns:hover {
+    background-color: rgba(156, 152, 152, 0.11);
+}
+
+.left {
+    margin: 7px;
+    flex: 2;
+    display: flex;
+    height: 35px;
+}
+
+*:focus {
+    outline: none;
+}
+
+/* 
+    to box start
+*/
+
+.email-chip-list {
+    width: 100%;
+    height: 40px;
+}
+
+::ng-deep .mat-form-field-infix {
+    padding: .1em !important;
+    border-top: none !important;
+}
+
+.mat-chip-list-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+::ng-deep .mat-input-underline {
+    display: none;
+}
+
+::ng-deep .mat-chip-remove {
+    background-color: transparent !important;
+}
+
+::ng-deep .mat-chip.mat-standard-chip:not(.mat-chip-disabled):active {
+    box-shadow: none !important;
+    background-color: transparent;
+}
+
+::ng-deep .mat-standard-chip.mat-chip-with-trailing-icon {
+    padding: 0px;
+}
+
+::ng-deep .mat-standard-chip {
+    height: 20px;
+    min-height: 20px;
+    max-height: 20px;
+}
+.mail-clip {
+    margin: 0px; 
+    padding: 3px 5px; 
+    background-color: transparent; 
+    color: rgb(65, 62, 62); 
+    border: 1px solid gainsboro; 
+    height: 20px; 
+    font-size: 12px; 
+    line-height: 20px;
+    min-height: 20px;
+    max-height: 20px;
+}
+
+::ng-deep .mat-chip-list-wrapper .mat-standard-chip, .mat-chip-list-wrapper input.mat-input-element {
+    margin: 0px !important;
+}
+
+/* 
+    to box end
+*/
+
+.right {
+    height: 24px;
+    width: 24px;
+    line-height: 24px;
+    margin: 7px 7px 0px 0px;
+    display: flex;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+}
+
+.right:hover {
+    background-color: rgba(128, 128, 128, 0.123);
+}
+
+.reply-editor {
+    width: 100%;
+}
+
+.quill-editor {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    overflow: hidden;
+}
+
+::ng-deep .ql-toolbar.ql-snow + .ql-container.ql-snow {
+    border: none;
+}
+
+::ng-deep .ql-toolbar.ql-snow {
+    border: none;
+    z-index: 50;
+}
+
+::ng-deep .ql-editor {
+    padding: 0px 0px;
+}
+
+
+.compose-footer {
+    display: flex;
+    height: 50px;
+    flex-direction: column;
+    background: #fff;
+    z-index: 200;
+    padding-left: 13px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    justify-content: flex-end;
+}
+
+
+.file-uploader {
+    height: 30px;
+    display: flex;
+    line-height: 30px;
+    font-size: 14px;
+    align-items: center;
+    margin-top: 5px;
+    /* background: violet; */
+}
+
+.footer-btns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-left {
+    display: flex;
+    align-items: center;
+}
+
+.footer-right {
+    display: flex;
+    align-items: center;
+}
+
+.f-btn {
+    height: 30px;
+    width: 30px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 8px;
+}
+
+.f-btn:hover {
+    background-color: rgba(128, 128, 128, 0.158);
+}
+.fr-btn {
+    height: 30px;
+    width: 30px;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fr-btn:hover {
+    background-color: rgba(128, 128, 128, 0.158);
+}
+
+.singnature {
+    padding: 10px 13px;
+}
+
+.display-none {
+    display: none;
+}
+
+::ng-deep .ql-container {
+    overflow-y: auto;
+    z-index: 1;
+    padding: 0px 14px;
+}
+
+::ng-deep .ql-editor{
+    min-height: 100px;
+    height: auto;
+    overflow: hidden;
+}
+
+#search {
+    width: 100%; 
+    border-bottom: 1.5px solid #287eee; 
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+}
+
+.search-form {
+    width: 100%; 
+    display: flex; 
+    align-items: center;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.mat-list-base {
+    height: 250px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+    height: 34px;
+}
+
+::ng-deep .mat-list-text {
+    font-size: .875rem;
 }
