--- a/src/app/main/mail-table/mail-table.component.css
+++ b/src/app/main/mail-table/mail-table.component.css
@@ -14,15 +14,19 @@
     overflow: hidden;
 }
 
-tr.mat-row {
-    height: 30px !important;
-    max-height: 30px !important;
+.mat-row {
+
     border-top: 1px solid rgba(128, 128, 128, 0.151);
     border-bottom: 1px solid rgba(128, 128, 128, 0.151);
     margin-left: 7px;
     margin-right: 7px;
+    display: flex;
+    border: 1px solid transparent;
   }
 
+.has-file {
+    height: 90px !important;
+}
 
 .mail-header {
     padding-left: 24px;
@@ -125,17 +129,48 @@ tr.mat-row {
     white-space: nowrap;
     justify-self: center;
     position: relative;
-    top: 5px;
     cursor: pointer;
 }
 
 .star-icon {
     cursor: pointer; 
-    position: relative; 
-    top: 3px; 
     margin-left: 10px; 
     font-size: 20px; 
+    line-height: 45px;
     color: rgba(128, 128, 128, 0.562);
+}
+
+.is-stared {
+    color: yellow;
+}
+
+.is-read {
+    background-color: rgba(220, 220, 220, 0.411);
+}
+
+.file-item {
+    display: flex;
+    align-items: center;
+    border: 1px solid gray;
+     padding: 0 10px; 
+     border-radius: 20px;
+     height: 30px; 
+     line-height: 30px; 
+     display: flex;
+     max-width: 150px;
+     margin-left: 15px;
+}
+
+.file-text {
+    font-size: 12px; 
+    padding-left: 3px;
+    max-width: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: initial;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .mail-subtitle {
@@ -149,7 +184,7 @@ tr.mat-row {
 }
 
 table {
-width: 100%;
+    width: 100%;
 }
 
 .custom {
@@ -160,6 +195,7 @@ width: 100%;
 .mat-header-row {
     display: none !important;
 }
+
 
 
 ::ng-deep .mat-checkbox-input {
@@ -186,7 +222,7 @@ th.mat-header-cell {
     position: absolute;
     display: none;
     left: 35px;
-    top: 16px;
+    /* top: 16px; */
     z-index: 100;
 }
 
@@ -214,18 +250,13 @@ th.mat-header-cell {
 }
 
 
-/* .mat-row:hover {
-    background: rgba(128, 128, 128, 0.123);
-} */
-
-
 .active,
 .mat-row:hover{
     -webkit-box-shadow: 0px 1.5px 1.5px 1px rgba(186, 173, 186, 0.466);
     -moz-box-shadow: 0px 1.5px 1.5px 1px rgba(186, 173, 186, 0.575);
     box-shadow: 0px 1.5px 1.5px 1px rgba(186,173,186,1);
     transform: scale(1);
-    border: 1px solid rgba(128, 128, 128, 0.671);
+    border: 1px solid gainsboro;
 }
 
 .option-icons {
@@ -669,4 +700,35 @@ expand list
 
 .other-list-title:active {
     background: rgba(117, 112, 112, 0.24);
+}
+
+#search {
+    width: 100%; 
+    border-bottom: 1.5px solid #287eee; 
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    outline: none;
+
+}
+
+.search-form {
+    width: 100%; 
+    display: flex; 
+    align-items: center;
+    padding-left: 14px;
+    padding-right: 14px;
+}
+.mat-list-base {
+    height: 250px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.mat-list-base .mat-list-item, .mat-list-base .mat-list-option {
+    height: 34px;
+}
+
+::ng-deep .mat-list-text {
+    font-size: .875rem;
 }
