--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -6,11 +6,13 @@
     <!-- Sidebar Holder -->
 
     <app-sidebar></app-sidebar>
-  
-    <router-outlet></router-outlet>
+    <div style="width: 100%;">
+    
+        <router-outlet></router-outlet>
 
+    </div>
 
     <app-right-sidebar></app-right-sidebar>
 
 </div>
-<app-compose-box style="position: absolute; bottom: 0px; right: 65px; z-index: 500;" ></app-compose-box>
+<app-compose-box *ngIf="isComposeOpen" style="position: absolute; bottom: 0px; right: 65px; z-index: 500;" ></app-compose-box>
