--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,28 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-menu-panel {
     min-width: 250px !important;
 }
+
+.ck-editor__main {
+    height: 38vh;
+}
+
+.ck-editor__editable {
+    height: 100%;
+    outline: none;
+}
+
+.ck-content {
+    padding: 0px !important;
+    height: 32vh;
+    box-shadow: none;
+}
+
+.ck-content p {
+    margin: 0px !important;
+    padding: 0px !important;
+    border: none;
+}
+.ck-focused {
+    border: none !important;
+    box-shadow: none !important;
+}
